--- a/Lab01Kucherenko/Lab01Kucherenko/Lab01Kucherenko.csproj
+++ b/Lab01Kucherenko/Lab01Kucherenko/Lab01Kucherenko.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net5.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <RootNamespace>KMA.Lab01Kucherenko</RootNamespace>
   </PropertyGroup>
 
 </Project>
